--- a/apps/dashboard/src/app/app.component.html
+++ b/apps/dashboard/src/app/app.component.html
@@ -27,7 +27,7 @@
     </nav>
   </mat-sidenav>
 
-  <mat-progress-bar *ngIf="loading$ | async" class="phones-progress app-progress-bar" color="accent" mode="indeterminate"></mat-progress-bar>
+  <mat-progress-bar *ngIf="loading$ | async" class="saved-progress app-progress-bar" color="accent" mode="indeterminate"></mat-progress-bar>
 
   <mat-toolbar color="primary" class="mat-elevation-z4 app-toolbar" >
   <span>
