--- a/apps/dashboard/src/app/search/search.component.scss
+++ b/apps/dashboard/src/app/search/search.component.scss
@@ -3,8 +3,14 @@
 mat-list-item {
   height: auto!important;
   padding: 15px 0!important;
+
+  .poster-container {
+    width: 10%;
+    display: flex;
+    justify-content: center;
+  }
   img.thumb {
-    height: calc(25vw)!important;
+    height: 50px!important;
   }
 }
 
@@ -18,7 +24,7 @@ mat-list-item {
 .container.full-page {
   flex-flow: column;
   .col-full {
-    height: calc(100vh - 95px);
+    height: calc(100vh - 85px);
     width: 100%;
   }
 }
@@ -28,9 +34,21 @@ mat-list-item {
   border: 1px solid #00e676;
 }
 
+.mat-card.poster-card {
+  min-height: auto;
+  height: 318px;
+  width: 218px;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 0;
+  box-sizing: border-box;
+}
+
 .mat-card {
   background: #151515 !important;
-  min-height: calc(100vh - 136px)!important;
+  min-height: calc(100vh - 120px)!important;
   margin-bottom: 0px;
 
   mat-card-actions {
